--- a/beneficios-alimentacao-equilibrada/index.html
+++ b/beneficios-alimentacao-equilibrada/index.html
@@ -43,12 +43,12 @@
             <li>
                 <img src="img beneficios-alimentação-equilibrada/rice-6247160-1.png" alt="#">
                 <div class="texto"><h2>Prato ideal</h2>
-                <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div>
+                <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <br> <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div>
             </li>
             <li>
                 <img src="img beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
                 <div class="texto"><h2>Exercícios e Nutrição</h2>
-                <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p></div>
+                <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <br> <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p></div>
             </li>
         </ul>
       </section>
@@ -57,87 +57,20 @@
         <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo 2.</p>
         <ul>
           <li>
-              <img src="img beneficios-alimentação-equilibrada/mateusz-feliksik-w96PYF0Uwjs-unsplash 1.png" alt="#">
+              <img src="img beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg" alt="#">
               <div class="texto"><h2>Riscos do Fast Food</h2>
-              <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p></div>
+              <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <br> <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p></div>
           </li>
           <li>
             <img src="img beneficios-alimentação-equilibrada/Group 24.png" alt="#">
             <div class="texto"><h2>Atenção aos Rótulos</h2>
-            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p></div>
+            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <br> <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p></div>
           </li>
         </ul>
       </section>
     </main>
-      <footer class="fitly-footer">
-        <div class="footer-container">
-            <div class="footer-grid">
-                <div class="footer-brand-section">
-                    <a href="#" class="footer-logo-link">
-                        <img src="img beneficios-alimentação-equilibrada/Captura_de_tela_2025-08-24_165054-removebg-preview.png" alt="Logo Fitly"
-                            class="logo-img">
-                        <span>Fitly</span>
-                    </a>
-                    <p class="footer-description">
-                        Sua jornada para uma vida mais saudável começa aqui. Encontre treinos, dicas e uma comunidade de
-                        apoio.
-                    </p>
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com/app.fitly?igsh=MTJjMXh5azdyZ2l2OA==" target="_blank"
-                            rel="noopener noreferrer" aria-label="Instagram" class="social-link">
-                            <svg class="social-icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-                                <defs>
-                                    <radialGradient id="instagram-gradient" cx="0.3" cy="1" r="1">
-                                        <stop offset="0%" stop-color="#F9D423" />
-                                        <stop offset="25%" stop-color="#F8A74A" />
-                                        <stop offset="50%" stop-color="#F2576B" />
-                                        <stop offset="75%" stop-color="#A53DAA" />
-                                        <stop offset="100%" stop-color="#5B4BBB" />
-                                    </radialGradient>
-                                </defs>
-                                <path fill="url(#instagram-gradient)"
-                                    d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.416 2.175 8.796 2.163 12 2.163m0-1.625C8.716.538 8.333.549 7.053.602c-3.613.164-6.02 2.58-6.182 6.182C.813 8.333.802 8.716.802 12s.011 3.667.069 4.948c.162 3.602 2.569 6.02 6.182 6.182 1.28.054 1.663.066 4.948.066s3.668-.012 4.948-.066c3.613-.162 6.02-2.58 6.182-6.182.058-1.28.069-1.663.069-4.948s-.011-3.668-.069-4.948c-.162-3.602-2.569-6.02-6.182-6.182C15.667.549 15.284.538 12 .538z">
-                                </path>
-                                <path fill="url(#instagram-gradient)"
-                                    d="M12 6.848c-2.835 0-5.152 2.316-5.152 5.152s2.317 5.152 5.152 5.152 5.152-2.316 5.152-5.152-2.317-5.152-5.152-5.152zm0 8.704c-1.96 0-3.552-1.592-3.552-3.552s1.592-3.552 3.552-3.552 3.552 1.592 3.552 3.552-1.592 3.552-3.552 3.552z">
-                                </path>
-                                <path fill="url(#instagram-gradient)"
-                                    d="M16.949 5.586c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5z">
-                                </path>
-                            </svg>
-                        </a>
-                        <a href="#" aria-label="Website" class="social-link">
-                            <svg class="social-icon-svg" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                    d="M12.586 4.586a2 2 0 112.828 2.828l-3 3a2 2 0 01-2.828 0 1 1 0 00-1.414 1.414 4 4 0 005.656 0l3-3a4 4 0 00-5.656-5.656l-1.5 1.5a1 1 0 101.414 1.414l1.5-1.5zm-5 5a2 2 0 012.828 0 1 1 0 101.414-1.414 4 4 0 00-5.656 0l-3 3a4 4 0 105.656 5.656l1.5-1.5a1 1 0 10-1.414-1.414l-1.5 1.5a2 2 0 11-2.828-2.828l3-3z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-                <div class="footer-links-column">
-                    <h3 class="footer-heading">Índice</h3>
-                    <ul class="footer-links-list">
-                        <li><a href="#" class="footer-link">Início</a></li>
-                        <li><a href="#" class="footer-link">Nossa Plataforma</a></li>
-                        <li><a href="#" class="footer-link">Sobre o Projeto</a></li>
-                        <li><a href="#" class="footer-link">Artigos</a></li>
-                    </ul>
-                </div>
-                <div class="footer-contact-column">
-                    <h3 class="footer-heading">Contato</h3>
-                    <div class="contact-info">
-                        <p>Tem alguma dúvida? Envie um e-mail para nós.</p>
-                        <a href="mailto:fitlyapp1@gmail.com" class="contact-email-link">fitlyapp1@gmail.com</a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p class="copyright-text">
-                    &copy; 2025 Fitly. Todos os direitos reservados.
-                </p>
-            </div>
-        </div>
+      <footer>
+       <p class="footer">NAO TEM AINDA</p>
     </footer>
   </body>
 </html>
