--- a/Sobre o projeto/sobreProjeto.html
+++ b/Sobre o projeto/sobreProjeto.html
@@ -15,14 +15,12 @@
      <nav>
        <ul>
          <li>
-           <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+           <a class="contato" href="/TrabalhandoNisso.html">Artigos</a>
          </li>
          <li>
-           <a href="#sobre">Sobre o projeto</a>
+           <a href="/sobreProjeto.html">Sobre o projeto</a>
          </li>
-         <li>
-           <a href="#plataforma">Nossa Plataforma</a>
-         </li>
+
          <li>
            <a href="#inicio">Início</a>
          </li>
@@ -38,48 +36,34 @@
           <div class="colab">
               <ul>
                   <li>
-                      <strong>Igor Marcon Michels;</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
+                      <strong>Igor Marcon Michels:</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
                   </li>
                   <li>
-                      <strong>Pedro José Oliveira da Roza;</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
+                      <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
                       <p>
                         <img class="imagem" src="/Imagens/Img integrantes/Pedro josé.jpeg" alt="Pedro josé">
                       </p>
                   </li>
                   <li>
-                      <strong>Victor Feliciano;</strong> Responsável pelo desenvolvimento da base de dados e as funcionalidades do app e o site, como login e senha, cálculos com os dados informados pelo usuário;
+                      <strong>Victor Feliciano:</strong> Responsável pelo desenvolvimento da base de dados e as funcionalidades do app e o site, como login e senha, cálculos com os dados informados pelo usuário;
                   </li>
                   <li>
-                      <strong>Victor Murilo Bernardes;</strong> Secretário do projeto, responsável pela descrição e desenvolvimento das atas de reunião;
+                      <strong>Victor Murilo Bernardes:</strong> Secretário do projeto, responsável pela descrição e desenvolvimento das atas de reunião;
                       <p>
                         <img class="imagem" src="/Imagens/Img integrantes/Victor Murilo.jpeg" alt="Victor Murilo">
                       </p>
                   </li>
                   <li>
-                      <strong>Kaue Teixeira;</strong> Responsável por programar as partes estáticas do site, além de auxiliar na pesquisa;
+                      <strong>Kaue Teixeira:</strong> Responsável por programar as partes estáticas do site, além de auxiliar na pesquisa;
                   </li>
                   <li>
-                      <strong>Matheus Lacerda Maximiano;</strong> Criador da organização, responsável por parte da pesquisa, a parte especificada está descrita no Documento;
+                      <strong>Matheus Lacerda Maximiano:</strong> Criador da organização, responsável por parte da pesquisa, a parte especificada está descrita no Documento;
                   </li>
           </ul>
           </div>
      </main>
 </body>
-   <footer>
-     <section class="ThreeCollum" id="ThreeCollum">
-       <div id="Parte1" class="Parte1">
-       <img src="/Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly Logo">
-       <p>Sua jornada para uma vida mais saudável, com o poder da tecnologia<p>
-       </div>
-       <div id="Parte2" class="Parte2">
-         <h3>Links Rápidos</h3>
-       </div>
-       <div id="Parte3" class="Parte3">
-         <h3>Contato</h3>
-       </div>
-     </section>
-     <section class="FullBar" id="FullBar">
-         <p>© 2025 Fitly. Todos os direitos reservados.</p>
-     </section>
-   </footer>
+<footer>
+  <h3>não tem ainda</h3>
+</footer>
 </html>
