Na branch atual, a pag. de alimentação equilibrada

--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -1,69 +1,142 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alimentação Equilibrada</title>
-    <link rel="stylesheet" href="CSS/alimentaçãoEquilibrada.css" />
-  </head>
 
-  <body>
-      <header>
-        <div class="logo">
-          <img src="../Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo" />
-          <a href="../index.html">Fitly</a>
-        </div>
-        <div>
-        <nav>
-          <ul>
-            
-            <li>
-              <a href="#inicio">Início</a>
-            </li>
-            <li>
-              <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
-            </li>
-            <li>
-              <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
-            </li>
-            <li>
-              <a href="#plataforma">Nossa Plataforma</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alimentação Equilibrada</title>
+  <link rel="stylesheet" href="CSS/alimentaçãoEquilibrada.css" />
+</head>
 
-    <main>
-      <section class="introduction">
-      <h2> 
-        Alimentação Equilibrada
-      </h2>
-      <p>
-        A alimentação é essencial para todos os seres vivos, de forma universal, ela constitui a base para todos para todas as qualidades dos seres vivos, como o crescimento, a evolução, a reprodução, todas essas ações são impossíveis sem uma alimentação. Mas não basta apenas se alimentar, é necessário que para o desempenho das mais diversas funções tenhamos uma alimentação saudável e equilibrada.
-      </p>
-      </section>
-      <section class="nutrients">
-        <h3>
-          O papel dos nutrientes em nosso corpo:
-        </h3>
-        <p>
-          De forma global, todas as pessoas para ter uma alimentação saudável devem ingerir os seguinte nutrientes
-        </p>
-        <ul>  
-        <li>
-          <h4>
-            Carboidratos:
-          </h4>
-          <p>
-            Esse nutriente é semelhante a gasolina do nosso corpo, uma fonte de energia para nossas ações mais rotineiras. É mais encontrado em massas e cereais. Um exemplo de carboidrato muito presente nos alimentos é a glicose.
-          </p>
-          <p>
-            <a href="https://sites.usp.br/rema/os-carboidratos-e-sua-importancia-para-o-corpo-humano/#:~:text=Esse%20nutriente%20%C3%A9%20o%20principal,carboidratos%20simples%20e%20carboidratos%20complexos.">Leia mais sobre em...</a>
-          </p>
+<body>
+  <header>
+    <div class="logo">
+      <img src="../Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo" />
+      <a href="../index.html">Fitly</a>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#inicio">Início</a>
           </li>
-          </ul>
-      </section>
-    </main>
-  </body>
+          <li>
+            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+          </li>
+          <li>
+            <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="introduction">
+      <h2>Alimentação Equilibrada</h2>
+      <p>
+        A alimentação é essencial para todos os seres vivos, de forma
+        universal, ela constitui a base para todos para todas as qualidades
+        dos seres vivos, como o crescimento, a evolução, a reprodução, todas
+        essas ações são impossíveis sem uma alimentação. Mas não basta apenas
+        se alimentar, é necessário que para o desempenho das mais diversas
+        funções tenhamos uma alimentação saudável e equilibrada.
+      </p>
+    </section>
+    <section class="nutrients">
+      <h3>O papel dos nutrientes em nosso corpo:</h3>
+      <p>
+        De forma global, todas as pessoas para ter uma alimentação saudável
+        devem ingerir os seguinte nutrientes:
+      </p>
+      <ul>
+        <li class="carbo">
+          <p>
+            <strong> Carboidratos: </strong>
+            Esse nutriente é semelhante a gasolina do nosso corpo, uma fonte
+            de energia para nossas ações mais rotineiras. É mais encontrado em
+            massas e cereais. Um exemplo de carboidrato muito presente nos
+            alimentos é a glicose.
+          </p>
+          <p>
+            <a
+              href="https://sites.usp.br/rema/os-carboidratos-e-sua-importancia-para-o-corpo-humano/#:~:text=Esse%20nutriente%20%C3%A9%20o%20principal,carboidratos%20simples%20e%20carboidratos%20complexos.">Leia
+              mais sobre em...</a>
+          </p>
+          <div>
+            <img src="../Imagens/img alimentacao-equilibrada/bread-6292215_1280 2.png" alt="Imagem_de_carboidratos" />
+          </div>
+        </li>
+        <li>
+          <p>
+            <strong> Proteínas: </strong>
+            Tem grande importância para o desempenho das atividades orgânicas,
+            como nas membranas das células que transportam substâncias para o
+            corpo, nos anticorpos e em várias partes do organismo.
+          </p>
+          <p>
+            <a
+              href="https://viverbem.unimed.coop.br/mude-1-habito/alimentacao-saudavel/proteinas-por-que-sao-tao-importantes/">Leia
+              mais sobre Protéinas em...
+            </a>
+          </p>
+          <div>
+            <img src="../Imagens/img alimentacao-equilibrada/sam-moghadam-VpOpy6QrDrs-unsplash 2.png"
+              alt="Foto_de_proteínas" />
+          </div>
+        </li>
+        <li>
+          <p>
+            <strong>
+            Lipídios:   
+            </strong>
+            Também conhecido como gorduras, não são produzidos pelo corpo. Muitas vezes associados a ganho de peso, mas também desempenham grande importância na proteção de órgãos vitais e na regulação e produção dos hormônios. Algumas fontes de lipídios são, por exemplo, peixes, carnes, produtos à base de leite, etc.
+          </p>
+          <p>
+            <a href="https://www.neoquimica.com.br/blog/saude/o-que-sao-lipidios-importancia-e-riscos-do-consumo-excessivo#:~:text=em%20mais%20detalhes.-,Fornecimento%20de%20energia,todo%2C%20como%20andar%20e%20falar.&text=Basicamente%2C%20a%20energia%20%C3%A9%20o,e%20a%20gordura%20(lip%C3%ADdios).&text=Al%C3%A9m%20disso%2C%20a%20gordura%20%C3%A9,pode%20fornecer%20energia%20por%20semanas.&text=Leia%20tamb%C3%A9m:%20Qual%20a%20principal%20vitamina%20para%20dar%20disposi%C3%A7%C3%A3o?">Leia mais sobre Lipídios em...</a>
+          </p>
+          <div>
+            <img src="../Imagens/img alimentacao-equilibrada/churros-2188871_1280 1.png" alt="Imagens_Churros">
+          </div>
+        </li>
+        <li>
+          <p>
+            <strong>
+              Vitaminas: 
+            </strong>
+             As vitaminas são essenciais para garantir o funcionamento das reações em nosso corpo, são catalizadores. De outra forma, as vitaminas ajudam as reações químicas de nosso corpo a ocorrerem de forma mais rápida e gastando menos energia no processo. Um exemplo de alimento rico em nutrientes são as frutas.
+          </p>
+          <p>
+            <a href="https://brasilescola.uol.com.br/biologia/vitaminas.htm">Leia mais sobre as vitaminas em...</a>
+          </p>
+          <div>
+            <img src="../Imagens/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png" alt="Imagem_de_Vitaminas">
+          </div>
+        </li>
+        <li>
+          <p>
+            <strong>
+              Água: 
+            </strong>
+          Não é um nutriente, mas é tão importante quanto, senão até mais, dos já citados. A água, como é de conhecimento quase geral, é a base para toda a vida, logicamente, para ter uma boa vida seria indispensável o consumo da mesma.
+          </p>
+          <p>
+            <a href="https://brasilescola.uol.com.br/geografia/agua2.htm">
+              Leia mais sobre a Água em...
+            </a>
+          </p>
+          <div>
+          <img src="../Imagens/img alimentacao-equilibrada/water-1632785_1280 1.png" alt="Imagem_de_Água">
+            </div>
+        </li>
+      </ul>
+    </section>
+    <section class="conclusion">
+      <p>
+        	Então, a base e os princípios para ter uma dieta e alimentação equilibrada é o consumo frequente de alimentos ricos nesses nutrientes e a água, de forma a sempre manter um equilíbrio entre eles. 
+      </p>
+    </section>
+  </main>
+</body>
+
 </html>
