--- a/footer.html
+++ b/footer.html
@@ -1,46 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodapé</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <footer>
-    <div class="secondColumn">
-        <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly_background">
-        <h2>
-            Fitly
-        </h2>
-        <a href="">
-            <span class="fa-brands fa-square-instagram"></span>
-        </a>
-        <a href="">
-            <span class="fa-brands fa-tiktok"></span>
-        </a>
+        <div class = "Logo-socialMidias" >
+            <a href="index.html">
+                <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly_background">
+                </p>
+                <h2>
+                    Fitly
+                </h2>    
+            </a>
+            <p>
+                Sua jornada para uma vida mais tranquila começa aqui. Encontre treinos, dicas e muito mais!
+            </p>
+                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-tiktok"></i></a>
         
-    </div>  
-    <div>
-        <h2>
-            Indice
-        </h2>
-        <ul>
-            <li>
-                <a href="index.html">Início</a>
-            </li>
-            <li>
-                <a href="Sobre o projeto/sobreProjeto.html">
-                Nosso projeto
-                </a>
-            </li>
-            <li>
-                <a href="Artigos/artigos.html">Artigos</a>
-            </li>
-        </ul>
-    </div>
-    <div>
-
-    </div>
-</footer>
+        </div>
+        <div class="mapSite">
+            <h2>
+                Indice
+            </h2>
+            <ul>
+                <li>
+                    <a href="index.html">Início</a>
+                </li>
+                <li>
+                    <a href="Sobre o projeto/sobreProjeto.html">
+                        Nosso projeto
+                    </a>
+                </li>
+                <li>
+                    <a href="Artigos/artigos.html">Artigos</a>
+                </li>
+            </ul>
+        </div>
+        <div class="contact">
+            <h2> Contato</h2>
+            <p>
+                Tem alguma dúvida? Nos contate
+            </p>
+            <p>
+                Fitlyapp1@gmail.com
+            </p>
+            <p>
+                Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+            </p>
+        </div>
+        <p>
+            &copy; 2025 Fitly. Todos os direitos reservados.
+        </p>
+    </footer>
 </body>
+
 </html>
