--- a/footer.html
+++ b/footer.html
@@ -11,50 +11,57 @@
 
 <body>
     <footer>
-        <div class = "Logo-socialMidias" >
-            <a href="index.html">
-                <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly_background">
+        <div>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly_background">
+                    <h2>
+                        Fitly
+                    </h2>
+                </a>
+                <p>
+                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
                 </p>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="fa-brands fa-square-instagram"></span></a>
+                    </li>
+                    <li>
+                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mapSite">
                 <h2>
-                    Fitly
-                </h2>    
-            </a>
-            <p>
-                Sua jornada para uma vida mais tranquila começa aqui. Encontre treinos, dicas e muito mais!
-            </p>
-                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
-        <a href=""><i class="fa-brands fa-tiktok"></i></a>
-        
-        </div>
-        <div class="mapSite">
-            <h2>
-                Indice
-            </h2>
-            <ul>
-                <li>
-                    <a href="index.html">Início</a>
-                </li>
-                <li>
-                    <a href="Sobre o projeto/sobreProjeto.html">
-                        Nosso projeto
-                    </a>
-                </li>
-                <li>
-                    <a href="Artigos/artigos.html">Artigos</a>
-                </li>
-            </ul>
-        </div>
-        <div class="contact">
-            <h2> Contato</h2>
-            <p>
-                Tem alguma dúvida? Nos contate
-            </p>
-            <p>
-                Fitlyapp1@gmail.com
-            </p>
-            <p>
-                Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-            </p>
+                    Indice
+                </h2>
+                <ul>
+                    <li>
+                        <a href="index.html">Início</a>
+                    </li>
+                    <li>
+                        <a href="Sobre o projeto/sobreProjeto.html">
+                            Nosso projeto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Artigos/artigos.html">Artigos</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h2> Contato</h2>
+                <p>
+                    Tem alguma dúvida? Nos contate
+                </p>
+                <p>
+                    Fitlyapp1@gmail.com
+                </p>
+                <p>
+                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                </p>
+            </div>
         </div>
         <p>
             &copy; 2025 Fitly. Todos os direitos reservados.
