Footer finalizado e minha foto apagada

--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
         <div>
             <div class="logo">
                 <a href="index.html">
-                    <img src="Imagens/logos/FitlyLogo-NoBackground.png" alt="Fitly_background">
+                    <img src="Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
@@ -25,7 +25,7 @@
                 <ul>
                     <li>
                         <a href="">
-                            <span class="fa-brands fa-square-instagram"></span></a>
+                            <span class="fa-brands fa-instagram"></span></a>
                     </li>
                     <li>
                         <a href=""><span class="fa-brands fa-tiktok"></span></a>
@@ -53,9 +53,9 @@
             <div class="contact">
                 <h2> Contato</h2>
                 <p>
-                    Tem alguma dúvida? Nos contate
+                    Tem alguma dúvida? Nos contate!
                 </p>
-                <p>
+                <p class="email">
                     Fitlyapp1@gmail.com
                 </p>
                 <p>
@@ -63,9 +63,11 @@
                 </p>
             </div>
         </div>
+        <div class="direitos">
         <p>
             &copy; 2025 Fitly. Todos os direitos reservados.
         </p>
+        </div>
     </footer>
 </body>
 
