Adição do footer

--- a/index.html
+++ b/index.html
@@ -103,34 +103,63 @@
     </main>
     
     <footer>
-      <section class="ThreeCollum" id="ThreeCollum">
-        <div id="Parte1" class="Parte1">
-        <div class="logoFooter">
-        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <div>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <h2>
+                        Fitly
+                    </h2>
+                </a>
+                <p>
+                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
+                </p>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li>
+                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mapSite">
+                <h2>
+                    Indice
+                </h2>
+                <ul>
+                    <li>
+                        <a href="index.html">Início</a>
+                    </li>
+                    <li>
+                        <a href="Sobre o projeto/sobreProjeto.html">
+                            Nosso projeto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Artigos/artigos.html">Artigos</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h2> Contato</h2>
+                <p>
+                    Tem alguma dúvida? Nos contate!
+                </p>
+                <p class="email">
+                    Fitlyapp1@gmail.com
+                </p>
+                <p>
+                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                </p>
+            </div>
         </div>
-        <a href=""><i class="fa-brands fa-square-instagram"></i></a>
-        <a href=""><i class="fa-brands fa-tiktok"></i></a>
+        <div class="direitos">
+        <p>
+            &copy; 2025 Fitly. Todos os direitos reservados.
+        </p>
         </div>
-        <div id="Parte2" class="Parte2">
-          <h3>Indice</h3>
-          <ul>
-            <li><a href="#inicio">Início</a></li>
-            <li><a href="#plataforma">Nossa Plataforma</a></li>
-            <li><a href="#sobre">Sobre o Projeto</a></li>
-            <li><a href="TrabalhandoNisso.html">Artigos</a></li>
-          </ul>
-        </div>
-        <div id="Parte3" class="Parte3">
-          <h3>Contato</h3>
-          <ul>
-            <li><a href="mailto:Fitlyapp1@gmail.com">Fitlyapp1@gmail.com</a></li>
-          </ul>
-        </div>
-      </section>
-      <section class="FullBar" id="FullBar">
-          <p>© 2025 Fitly. Todos os direitos reservados.</p>
-      </section>
     </footer>
   </body>
 </html>
