--- a/Sobre o projeto/sobreProjeto.html
+++ b/Sobre o projeto/sobreProjeto.html
@@ -1,69 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre o Projeto</title>
-  <link rel="stylesheet" href="css/sobreProjeto.css" />
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Sobre o Projeto</title>
+ <link rel="stylesheet" href="css/sobreProjeto.css" />
 </head>
 <body>
-   <header>
-     <div class="logo">
-       <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-       <a href="/FitlyApp"><h2>Fitly</h2></a>
-     </div>
-     <nav>
-       <ul>
-         <li>
-           <a class="contato" href="/TrabalhandoNisso.html">Artigos</a>
-         </li>
-         <li>
-           <a href="/sobreProjeto.html">Sobre o projeto</a>
-         </li>
+  <header>
+    <div class="logo">
+      <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+      <a href="/FitlyApp"><h2>Fitly</h2></a>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a class="contato" href="/TrabalhandoNisso.html">Artigos</a>
+        </li>
+        <li>
+          <a href="/sobreProjeto.html">Sobre o projeto</a>
+        </li>
 
-         <li>
-           <a href="#inicio">Início</a>
-         </li>
-       </ul>
-     </nav>
-   </header>
-  <main>
-      <h2>Sobre o projeto</h2>
-      <p>O Fitly é uma plataforma inovadora dedicada à organização da alimentação diária, com foco em proporcionar uma experiência personalizada e eficaz para atingir os objetivos de saúde e bem-estar dos usuários.</p>
-      <p>Ao iniciar o uso do Fitly, o usuário será guiado por um processo simples, onde será possível informar dados essenciais, como peso, altura, sexo, idade, nível de atividade física e o objetivo específico (ganho de massa muscular, perda de gordura ou ambos simultaneamente).Nosso objetivo principal é fornecer metas realistas e atingíveis de acordo com os objetivos do usuário, como metas de curto e longo prazo (2 semanas, 1 mês, 2 meses, etc.), garantindo que a jornada alimentar seja contínua e com resultados progressivos.</p>
-      <p>O impacto esperado do Fitly é ajudar uma comunidade crescente de pelo menos 1000 pessoas a alcançarem seus objetivos de saúde de maneira sustentável.</p>
-        <h2>Colaboradores do projeto</h2>
-          <div class="colab">
-              <ul>
-                  <li>
-                      <strong>Igor Marcon Michels:</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
-                  </li>
-                  <li>
-                      <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
-                      <p>
-                        <img class="imagem" src="/Imagens/Img integrantes/Pedro josé.jpeg" alt="Pedro josé">
-                      </p>
-                  </li>
-                  <li>
-                      <strong>Victor Feliciano:</strong> Responsável pelo desenvolvimento da base de dados e as funcionalidades do app e o site, como login e senha, cálculos com os dados informados pelo usuário;
-                  </li>
-                  <li>
-                      <strong>Victor Murilo Bernardes:</strong> Secretário do projeto, responsável pela descrição e desenvolvimento das atas de reunião;
-                      <p>
-                        <img class="imagem" src="/Imagens/Img integrantes/Victor Murilo.jpeg" alt="Victor Murilo">
-                      </p>
-                  </li>
-                  <li>
-                      <strong>Kaue Teixeira:</strong> Responsável por programar as partes estáticas do site, além de auxiliar na pesquisa;
-                  </li>
-                  <li>
-                      <strong>Matheus Lacerda Maximiano:</strong> Criador da organização, responsável por parte da pesquisa, a parte especificada está descrita no Documento;
-                  </li>
-          </ul>
-          </div>
-     </main>
+
+        <li>
+          <a href="#inicio">Início</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+ <main>
+     <h1>Sobre o projeto</h1>
+     <p>O Fitly é uma plataforma inovadora dedicada à organização da alimentação diária, com foco em proporcionar uma experiência personalizada e eficaz para atingir os objetivos de saúde e bem-estar dos usuários.</p>
+     <p>Ao iniciar o uso do Fitly, o usuário será guiado por um processo simples, onde será possível informar dados essenciais, como peso, altura, sexo, idade, nível de atividade física e o objetivo específico (ganho de massa muscular, perda de gordura ou ambos simultaneamente).Nosso objetivo principal é fornecer metas realistas e atingíveis de acordo com os objetivos do usuário, como metas de curto e longo prazo (2 semanas, 1 mês, 2 meses, etc.), garantindo que a jornada alimentar seja contínua e com resultados progressivos.</p>
+     <p>O impacto esperado do Fitly é ajudar uma comunidade crescente de pelo menos 1000 pessoas a alcançarem seus objetivos de saúde de maneira sustentável.</p>
+       <h2>Colaboradores do projeto</h2>
+         <div class="colab">
+             <ul class="primeira-dupla">
+                 <li>
+                     <strong>Igor Marcon Michels:</strong> Líder do projeto, responsável pela entrega das partes de cada um e coordenador das funções de cada um;
+                 </li>
+                 <li>
+                     <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
+                     <p>
+                       <img class="imagem" src="/Imagens/Img integrantes/Pedro josé.jpeg" alt="Pedro josé">
+                     </p>
+                   </li>
+                 </ul>
+                 <ul class="segunda-dupla">
+                   <li>
+                     <strong>Victor Feliciano:</strong> Responsável pelo desenvolvimento da base de dados e as funcionalidades do app e o site, como login e senha, cálculos com os dados informados pelo usuário;
+                   </li>
+                   <li>
+                     <strong>Victor Murilo Bernardes:</strong> Secretário do projeto, responsável pela descrição e desenvolvimento das atas de reunião;
+                     <p>
+                       <img class="imagem" src="/Imagens/Img integrantes/Victor Murilo.jpeg" alt="Victor Murilo">
+                     </p>
+                   </li>
+                 </ul>
+                 <ul class="terceira-dupla">
+                   <li>
+                     <strong>Kaue Teixeira:</strong> Responsável por programar as partes estáticas do site, além de auxiliar na pesquisa;
+                   </li>
+                   <li>
+                     <strong>Matheus Lacerda Maximiano:</strong> Criador da organização, responsável por parte da pesquisa, a parte especificada está descrita no Documento;
+                   </li>
+                 </ul>
+         </div>
+    </main>
 </body>
 <footer>
-  <h3>não tem ainda</h3>
+ <h3>não tem ainda</h3>
 </footer>
 </html>
