--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alimentação Equilibrada</title>
-  <link rel="stylesheet" href="CSS/alimentaçãoEquilibrada.css" />
+  <link rel="stylesheet" href="CSS/alimentaçãoEquilibrada.css"/>
+    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <img src="../Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo" />
+      <img src="../Imagens/logos/FitlyLogo-NoBackground.png" alt="Logo"/>
       <a href="../index.html">Fitly</a>
     </div>
     <div>
@@ -140,8 +141,8 @@
   <footer>
         <div>
             <div class="logo">
-                <a href="index.html">
-                    <img src="Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                <a href="../index.html">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
@@ -197,5 +198,4 @@
         </div>
     </footer>
 </body>
-
 </html>
