--- a/Artigos/artigos.html
+++ b/Artigos/artigos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artigos</title>
-    <link rel="stylesheet" href="CSS/artigos.css" />
+    <link rel="stylesheet" href="CSS/artigos.css"/>
   </head>
   <body>
     <header>
@@ -12,6 +12,8 @@
     </header>
     <main>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
   </body>
 </html>
