--- a/beneficios-alimentacao-equilibrada/beneficios.html
+++ b/beneficios-alimentacao-equilibrada/beneficios.html
@@ -38,7 +38,7 @@
         </p>
         <ul>
             <li>
-                <img src="img beneficios-alimentação-equilibrada/rice-6247160-1.png" alt="#">
+                <img src="img beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg" alt="#">
                 <div class="texto"><h2>Prato ideal</h2>
                 <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <br> <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div>
             </li>
