--- a/Artigos/artigoPrincipal.html
+++ b/Artigos/artigoPrincipal.html
@@ -32,16 +32,28 @@
             <h1>Artigos Principais</h1>
             <ul>
               <li>
-                <a href="alimentacaoEquilibrada.html">
-                  <img src="" alt="">
-                  <p>Alimentação-equilibrada</p>
-                </a>
+                <h2>Alimentação equilibrada</h2>
+                <div class="tudo">
+                <img src="img artigoPrincipal/landscape-placeholder 1.png" alt="img">
+                  <div class="texto">
+                    <p>aaaaaaaaaaaaaaaaaaaaaa</p>
+                    <a href="alimentacaoEquilibrada.html">
+                    <p>Acesse o Artigo</p>
+                    </a>
+                  </div>
+                </div>
               </li>
               <li>
-                <a href="/beneficios-alimentacao-equilibrada/index.html">
-                  <img src="" alt="">
-                  <p>beneficios-alimentação-equilibrada</p>
-                </a>
+                <h2>Benefícios da alimentação equilibrada</h2>
+                <div class="tudo">
+                <img src="img artigoPrincipal/landscape-placeholder 1.png" alt="img">
+                  <div class="texto">
+                    <p>aaaaaaaaaaaaaaaaaaaaaa</p>
+                    <a href="/beneficios-alimentacao-equilibrada/beneficios.html">
+                    <p>Acesse o Artigo</p>
+                    </a>
+                  </div>
+                </div>
               </li>
             </ul>
         </section>
