Deus, se tu existe, que não dê conflito

--- a/Artigos/alimentacaoEquilibrada.html
+++ b/Artigos/alimentacaoEquilibrada.html
@@ -19,10 +19,10 @@
       <nav>
         <ul>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="../index.html">Início</a>
           </li>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a class="contato" href="artigoPrincipal.html">Artigos</a>
           </li>
           <li>
             <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
@@ -65,7 +65,7 @@
               mais sobre em...</a>
           </p>
           <div>
-            <img src="../Imagens/img alimentacao-equilibrada/bread-6292215_1280 2.png" alt="Imagem_de_carboidratos" />
+            <img src="../Imagens/img Artigos/img alimentacao-equilibrada/bread-6292215_1280 2.png" alt="Imagem_de_carboidratos" />
           </div>
         </li>
         <li>
@@ -82,7 +82,7 @@
             </a>
           </p>
           <div>
-            <img src="../Imagens/img alimentacao-equilibrada/sam-moghadam-VpOpy6QrDrs-unsplash 2.png"
+            <img src="../Imagens/img Artigos/img alimentacao-equilibrada/sam-moghadam-VpOpy6QrDrs-unsplash 2.png"
               alt="Foto_de_proteínas" />
           </div>
         </li>
@@ -97,7 +97,7 @@
             <a href="https://www.neoquimica.com.br/blog/saude/o-que-sao-lipidios-importancia-e-riscos-do-consumo-excessivo#:~:text=em%20mais%20detalhes.-,Fornecimento%20de%20energia,todo%2C%20como%20andar%20e%20falar.&text=Basicamente%2C%20a%20energia%20%C3%A9%20o,e%20a%20gordura%20(lip%C3%ADdios).&text=Al%C3%A9m%20disso%2C%20a%20gordura%20%C3%A9,pode%20fornecer%20energia%20por%20semanas.&text=Leia%20tamb%C3%A9m:%20Qual%20a%20principal%20vitamina%20para%20dar%20disposi%C3%A7%C3%A3o?">Leia mais sobre Lipídios em...</a>
           </p>
           <div>
-            <img src="../Imagens/img alimentacao-equilibrada/churros-2188871_1280 1.png" alt="Imagens_Churros">
+            <img src="../Imagens/img Artigos/img alimentacao-equilibrada/churros-2188871_1280 1.png" alt="Imagens_Churros">
           </div>
         </li>
         <li>
@@ -111,7 +111,7 @@
             <a href="https://brasilescola.uol.com.br/biologia/vitaminas.htm">Leia mais sobre as vitaminas em...</a>
           </p>
           <div>
-            <img src="../Imagens/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png" alt="Imagem_de_Vitaminas">
+            <img src="../Imagens/img Artigos/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png" alt="Imagem_de_Vitaminas">
           </div>
         </li>
         <li>
@@ -127,7 +127,7 @@
             </a>
           </p>
           <div>
-          <img src="../Imagens/img alimentacao-equilibrada/water-1632785_1280 1.png" alt="Imagem_de_Água">
+          <img src="../Imagens/img Artigos/img alimentacao-equilibrada/water-1632785_1280 1.png" alt="Imagem_de_Água">
             </div>
         </li>
       </ul>
@@ -166,15 +166,15 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="index.html">Início</a>
+                        <a href="../index.html">Início</a>
                     </li>
                     <li>
-                        <a href="Sobre o projeto/sobreProjeto.html">
+                        <a href="../Sobre o projeto/sobreProjeto.html">
                             Nosso projeto
                         </a>
                     </li>
                     <li>
-                        <a href="Artigos/artigos.html">Artigos</a>
+                        <a href="artigoPrincipal.html">Artigos</a>
                     </li>
                 </ul>
             </div>
