--- a/Sobre o projeto/sobreProjeto.html
+++ b/Sobre o projeto/sobreProjeto.html
@@ -42,7 +42,7 @@
                  <li>
                      <strong>Pedro José Oliveira da Roza:</strong> Responsável pela pesquisa e auxiliar no desenvolvimento das partes estáticas do site.
                      <p>
-                       <img class="imagem" src="/Imagens/Img integrantes/Pedro josé.jpeg" alt="Pedro josé">
+                       <img class="imagem" src="/Imagens/Img integrantes/Pedroj.jpg" alt="Pedro josé">
                      </p>
                    </li>
                  </ul>
