--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
           </li>
           <li>
-            <a href="#sobre">Sobre o projeto</a>
+            <a href="#Sobre">Sobre o projeto</a>
           </li>
           <li>
             <a href="#plataforma">Nossa Plataforma</a>
