--- a/Artigos/artigoPrincipal.html
+++ b/Artigos/artigoPrincipal.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a class="contato" href="artigoPrincipal.html">Artigos</a>
           </li>
           <li>
             <a href="#plataforma">Nossa Plataforma</a>
@@ -34,11 +34,11 @@
               <li>
                 <h2>Alimentação equilibrada</h2>
                 <div class="tudo">
-                <img src="img artigoPrincipal/landscape-placeholder 1.png" alt="img">
+                <a href="alimentacaoEquilibrada.html"><img src="img artigoPrincipal/landscape-placeholder 1.png" alt="img"></a>
                   <div class="texto">
-                    <p>aaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>Adotar uma alimentação equilibrada é essencial para a promoção da saúde ao longo da vida.</p>
                     <a href="alimentacaoEquilibrada.html">
-                    <p>Acesse o Artigo</p>
+                    <p class="button">Acesse o Artigo</p>
                     </a>
                   </div>
                 </div>
@@ -46,11 +46,11 @@
               <li>
                 <h2>Benefícios da alimentação equilibrada</h2>
                 <div class="tudo">
-                <img src="img artigoPrincipal/landscape-placeholder 1.png" alt="img">
+                <a href="/beneficios-alimentacao-equilibrada/beneficios.html"><img src="img artigoPrincipal/landscape-placeholder 1.png" alt="img"></a>
                   <div class="texto">
-                    <p>aaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>Uma alimentação equilibrada traz benefícios como mais energia, fortalecimento da imunidade e prevenção de doenças.</p>
                     <a href="/beneficios-alimentacao-equilibrada/beneficios.html">
-                    <p>Acesse o Artigo</p>
+                    <p class="button">Acesse o Artigo</p>
                     </a>
                   </div>
                 </div>
@@ -58,4 +58,63 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <div>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <h2>
+                        Fitly
+                    </h2>
+                </a>
+                <p>
+                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
+                </p>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li>
+                        <a href=""><span class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mapSite">
+                <h2>
+                    Indice
+                </h2>
+                <ul>
+                    <li>
+                        <a href="index.html">Início</a>
+                    </li>
+                    <li>
+                        <a href="Sobre o projeto/sobreProjeto.html">
+                            Nosso projeto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Artigos/artigos.html">Artigos</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h2> Contato</h2>
+                <p>
+                    Tem alguma dúvida? Nos contate!
+                </p>
+                <p class="email">
+                    Fitlyapp1@gmail.com
+                </p>
+                <p>
+                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                </p>
+            </div>
+        </div>
+        <div class="direitos">
+        <p>
+            &copy; 2025 Fitly. Todos os direitos reservados.
+        </p>
+        </div>
+    </footer>
   </body>  
