Finalização da pág micro-habitos, adição das imagens correção de alguns links

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         <h1>404</h1>
         <h2>Página Não Encontrada</h2>
         <button></button>
-        <a href="/FitlyApp"> <i class="fa-solid fa-house"></i>  Volte A Página Inicial</a>
+        <a href="index.html"> <i class="fa-solid fa-house"></i>  Volte A Página Inicial</a>
         </section>
     </main>
     <footer>
