Esqueci de adicionar esse

--- a/Artigos/organização_alimentar.html
+++ b/Artigos/organização_alimentar.html
@@ -19,10 +19,10 @@
       <nav>
         <ul>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="../index.html">Início</a>
           </li>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a class="contato" href="../Artigos/artigoPrincipal.html">Artigos</a>
           </li>
           <li>
             <a href="../Sobre o projeto/sobreProjeto.html">Sobre o projeto</a>
